[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
framework = { path = "../framework" }
async-std = { version = "1.8.0", features = ["attributes"] }
tide = "0.16.0"
tokio = { version = "1.28.2", features = ["full"] }
