[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
framework = { path = "../framework" }
tide = "0.16.0"
anymap = { git = "https://github.com/CompeyDev/signals-rs.git", rev = "8a650a1" }
serde_json = "1.0.96"
serde = { version = "1.0.163", features = ["derive"] }
rand = "0.8.5"
