[package]
name = "framework"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
colored = "2.0.0"
anymap = { git = "https://github.com/CompeyDev/signals-rs.git", rev = "8a650a1" }
